update Dockerfile (connect with AWS EC2)

--- a/CRUD/Dockerfile
+++ b/CRUD/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 RUN npm install
+RUN npm install -g pm2
 # If you are building your code for production
 # RUN npm ci --only=production
 
@@ -14,4 +15,5 @@ RUN npm install
 COPY . .
 
 EXPOSE 3000
-CMD [ "node", "./bin/www" ]
+# CMD [ "node", "./bin/www" ]
+CMD ["pm2-runtime", "start", "./bin/www"]
